2004-09-23  Kenichi Handa  <handa@m17n.org>

	* HELLO.utf8, HELLO.xml: Add Sinhala.

2004-09-14  Kenichi Handa  <handa@m17n.org>

	* medit.c (update_selection): Fix for the case that the selection
	is just one line.

2004-08-27  Kenichi Handa  <handa@m17n.org>

	* mdump.c (help_exit): Describe about the arg "-r".
	(reverse_bit_order, init_reverse_bit_order): Delete them.
	(main): Handle the arg "-r".

2004-08-25  Kenichi Handa  <handa@m17n.org>

	* medit.c: Adjusted for the member name change
	(MDrawGlyphInfo->this -> MDrawGlyphInfo->metics).

	* mdump.c: Adjusted for the member name change
	(MDrawGlyphInfo->this -> MDrawGlyphInfo->metics).

2004-08-16  Kenichi Handa  <handa@m17n.org>

	* Version 1.1.0 released.

2004-08-15  Kenichi Handa  <handa@m17n.org>

	* MEdit.ja: Add Dhivehi.

	* HELLO.utf8, HELLO.xml: Add Oriya and Dhivehi.

	* medit.c (covert_selection): Handle explicit request of
	UTF8_STRING.
	(ExposeProc): If an initial input method is specifed, activate it.
	(setup_input_methods): New arg initial_input_method.  If it's not
	NULL, set current_input_method to the corresponding index.
	(help_exit): Fix help message.
	(main): Handle --im and -s command args.

	* mdump.c (help_exit): Fix help message.

2004-08-09  Kenichi Handa  <handa@m17n.org>

	* mconv.c (VERSION): Updated to 1.1.

	* mdate.c (VERSION): Likewise.

	* medit.c (VERSION): Likewise.

	* mview.c (VERSION): Likewise.

2004-07-28  Kenichi Handa  <handa@m17n.org>

	* HELLO.utf8: Add language names for Telugu and Gujarati.

	* HELLO.xml: Add language names for Telugu and Gujarati.

2004-07-26  Kenichi Handa  <handa@m17n.org>

	* medit.c (redraw_cursor): Fix checking of redrawing area.
	(set_input_method_spot): Don't check face if the buffer is empty.
	(show_cursor): Likewise.
	(delete_char): Fix adjustment of nchars.
	(CursorProc): Call update_cursor.

2004-07-23  Kenichi Handa  <handa@m17n.org>

	* HELLO.xml: Add Myanmar.

	* HELLO.utf8: Add Myanmar.

2004-07-22  Kenichi Handa  <handa@m17n.org>
