@@ -126,6 +126,11 @@
   <td lang="ml">നമസ്കാരം</td>
 </tr>
 <tr>
+  <td>Sinhala</td>
+  <td>සිංහල</td>
+  <td>ආයුබෝවන්</td>
+</tr>
+<tr>
   <td>Tibetan</td>
   <td lang="bo">བོད་སྐད་</td>
   <td lang="bo">བཀྲ་ཤིས་བདེ་ལེགས༎</td>
